# claferwiki

./: .gitattributes  .gitignore  CHANGES.md  Clafer Wiki Test Suite.page  Compile Error Reporting Test.page  Front Page.page  Makefile  Merchandise Financial Planning.page  Mockup.page  Name Resolution Bug.html  Parse Error Reporting Test.page  README.md  Sandbox page for exploratory testing.page  Telematics Example.page  Test.page  claferwiki.cabal  claferwiki.sh  gitit-users  gitit.cnf  plugin.page  sandbox.page  stack.yaml
plugins/: CapitalizeEmphasis.hs  Clafer.hi  Clafer.hs  ClaferCleanup.hs  ClaferCompiler.hs  ClaferReader.hs  ClaferStats.hs  ClaferWriter.hs  Dot.hi  Dot.hs  ImgTex.hs  PigLatin.hs  claferwiki.cabal
plugins/src/Language/Clafer/Wiki/: ClaferCleanup.hs  ClaferCompiler.hs
plugins/src/Language/Clafer/Wiki/Example/: Signature.hs  WebArchiver.hs
spec/: Mockup.dot  Mockup.html  Telematics Example.dot  Telematics Example.html
src/Language/Clafer/Wiki/: ClaferCompiler.hs  ClaferReader.hs  ClaferWriter.hs
src/Language/Clafer/Wiki/Example/: CapitalizeEmphasis.hs  Deprofanizer.hs  Dot.hs  ImgTex.hs  Interwiki.hs  PigLatin.hs  ShowUser.hs  Subst.hs
src/Network/Gitit/Plugin/: Clafer.hs  ClaferCleanup.hs  ClaferCompiler.hs  ClaferReader.hs  ClaferStats.hs  ClaferWiki.hs  ClaferWriter.hs
static/clafer/: Compile Error Reporting Test.name.txt  Merchandise Financial Planning.name.txt  Parse Error Reporting Test.name.txt  Test.name.txt  name.txt  sandbox.name.txt
static/css/: clafer.css  custom.css
templates/: footer.st
testwiki/: gitit.cnf  highlighted-clafer-example-telematics.html  run.bat
