cabal-version:          3.8
name:                   claferwiki
version:                0.5.1
author:                 Michał Antkiewicz, Chris Walker, Luke Michael Brown
maintainer:             Michał Antkiewicz <michal.antkiewicz@uwaterloo.ca>
synopsis:               A wiki-based IDE for literate modeling with Clafer
description:            A wiki-based IDE for literate modeling with Clafer. A Plugin for the Gitit wiki which collects code blocks written in Clafer (.clafer), compiles them, renders into HTML and Dot, and replaces the code blocks with the results.
homepage:               http://github.com/gsdlab/claferwiki
stability:              Experimental
category:               Wiki
build-type:             Simple
copyright:              Michal Antkiewicz, Chris Walker, Luke Michael Brown
license:                MIT
license-file:           LICENSE
Tested-with:            GHC == 9.2.8
                      , GHC == 9.4.8
data-files:             claferwiki.sh
                      , gitit.cnf
                      , Makefile
                      , README.md
                      , CHANGES.md
                      , static/img/logo.png
                      , static/css/clafer.css
                      , static/css/custom.css
                      , templates/footer.st
                      , stack.yaml
source-repository head
    type:               git
    location:           git://github.com/gsdlab/claferwiki.git

library
  default-language:     Haskell2010
  build-depends:        base >= 4.16 && < 5
                      , containers >= 0.5.7.1
                      , directory >= 1.2.1.0
                      , process >= 1.2.0.0
                      , time >= 1.4.2
                      , transformers >= 0.3.0.0

                      , mtl >= 2.2.1
                      , network >= 2.6.3.2
                      , network-bsd >= 2.8
                      , split >= 0.2.3.2
                      , text >= 2.0

                      , MissingH >= 1.3.0.1
                      , network-uri >= 2.6.0.3
                      , SHA >= 1.6.4.2
                      , utf8-string >= 0.3.8
                      , gitit >= 0.15.1.1
                      , transformers-compat >= 0.5.1.4

                      , clafer == 0.5.1
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-orphans
  exposed-modules:      Network.Gitit.Plugin.ClaferWiki
