Name:           ClaferWiki
version:        0.3.2
stability:      experimental
author:         Chris Walker, Michal Antkiewicz
maintainer:     Michal Antkiewicz
synopsis:       A wiki-based IDE for modeling with Clafer
homepage:       http://github.com/gsdlab/claferwiki
category:       Wiki
cabal-version:  >= 1.12
build-type:     Simple
copyright:      Chris Walker, Michal Antkiewicz
license:        MIT
license-file:   LICENSE
tested-with:    GHC==7.4.1
data-files:     
            claferwiki.sh,
            gitit.cnf,
            README.md

library 
  build-depends:   
                   base >= 4,
                   gitit >= 0.10.0.1,
                   clafer >= 0.3.2
  hs-source-dirs:  src
  ghc-options:     -Wall

